objects/CIF_Upcharge__c.object
<CustomObject>
    <fields>
        <fullName>CIF_Old_Upcharge__c</fullName>
        <formula>CIF_Upcharge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CIF Old Upcharge $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CIF_Upcharge__c</fullName>
        <label>CIF Upcharge $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ItemPackID__c</fullName>
        <label>ItemPackID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemSizeID__c</fullName>
        <label>ItemSizeID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_Item_Number__c</fullName>
        <externalId>true</externalId>
        <label>Long Item Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Item_Number__c</fullName>
        <externalId>true</externalId>
        <label>Short Item Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>CIF Upcharge</label>
    <nameField>
        <displayFormat>CIF-{00000}</displayFormat>
        <label>CIF Upcharge</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CIF Upcharge</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>